<resources>
    <string name="app_name">Ahmed Zubair Contacts</string>
    <string name="first_name">First Name</string>
    <string name="first_name_required">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_required">Email*</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_required">Phone Number*</string>
    <string name="address">Address</string>
    <string name="error_text">An error occurred!</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="new_contact">New Contact</string>
    <string name="upload_image">Upload Image</string>
    <string name="phone_type">Phone Type</string>
    <string name="email_type">Email Type</string>
    <string name="field_required">This field is required!</string>
    <string name="cancel">Cancel</string>
    <string name="address_type">Address Type</string>
    <string name="street_name_required">Street Name*</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="space">&#160;</string>
    <string name="error_contact_saving">An error occurred! Contact could not be saved. Please try again.</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="add_new_phone">Add New Phone</string>
    <string name="add_new_email">Add New Email</string>
    <string name="add_new_address">Add New Address</string>
    <string name="call_permission_title">Call Phone Permission</string>
    <string name="ask">Ask Me</string>
    <string name="no">No</string>
    <string name="call_permission_message">This feature requires your permission to make a call</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="add">Add</string>
    <string name="help_page">Help Page</string>
    <string name="help_screen_description">Welcome to help page. Hopefully this makes the usage of the app easier. All fields with a * next to it is required. </string>
    <string name="list_page">List Page</string>
    <string name="list_page_info">To search contacts, make sure to click on the search icon on the top left. To create new contact, click on the top right menu icon and the option above the help option. To see more details about a contact, click on the related row.</string>
    <string name="details_page">Details Page</string>
    <string name="details_page_info">Clicking on a phone number to send a text or call. App requires permission to enable calling. Clicking on emails will direct you to email and addresses will point to Google maps</string>
    <string name="new_or_edit_contact">New or Edit Contact</string>
    <string name="new_edit_contact_info">New and Edit screens are similar however, during edit screen data is pre populated. You can clear a row by clicking on the X button next to each row.</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
